--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     />
 
     <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- STYLE -->
     <link rel="stylesheet" href="style.css" />
@@ -23,6 +29,31 @@
     <title>Weatherly</title>
   </head>
   <body>
+    <main class="main">
+      <div class="container">
+        <!-- <img src="" alt="weatherly logo" /> -->
+        <form class="form" action="none">
+          <input
+            class="form__input"
+            type="text"
+            placeholder="search your city"
+            autocomplete="off"
+          />
+          <button class="form__btn" data-form-button>
+            <ion-icon name="search-outline"></ion-icon>
+          </button>
+        </form>
+      </div>
+    </main>
+
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
     <script defer src="script.js"></script>
   </body>
 </html>
