--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <main class="main">
-      <div class="container">
+      <div class="container" data-container>
         <!-- <img src="" alt="weatherly logo" /> -->
         <form class="form">
           <input
