--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Display weather forecast for your city, or any other selected."
+      content="Display actual weather for your city, or any other selected."
     />
     <meta
       name="keywords"
@@ -22,6 +22,9 @@
       rel="stylesheet"
     />
 
+    <!-- FAVICON -->
+    <link rel="icon" href="img/favicon.png" />
+
     <!-- STYLE -->
     <link rel="stylesheet" href="style.css" />
 
@@ -31,7 +34,7 @@
   <body>
     <main class="main">
       <div class="container" data-container>
-        <!-- <img src="" alt="weatherly logo" /> -->
+        <img class="logo" src="./img/weatherly-logo.png" alt="weatherly logo" />
         <form class="form">
           <input
             class="form__input"
