add tile generation
need to fix:
values in tile,
display into 2 col gird when more cards,
reset button,
smooth transition for generated tiles (link in .js)

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
           </button>
         </form>
       </div>
-      <div class="tile">
+      <div class="tiles">
+        <!-- <div class="tile">
         <div class="city">Ohio</div>
         <hr class="divider" />
         <div class="temperature">
@@ -68,6 +69,7 @@
           <span>Wind Speed:</span> <span>x*1.852 KM/H</span>
         </div>
         <div class="wind__dir"><span> Wind Direction:</span></div>
+      </div> -->
       </div>
     </main>
     <footer class="footer">
