--- a/index.html
+++ b/index.html
@@ -50,26 +50,26 @@
       </div>
       <div class="tiles">
         <!-- <div class="tile">
-        <div class="city">Ohio</div>
-        <hr class="divider" />
-        <div class="temperature">
-          <div class="temperature__icon">
-            <ion-icon name="rainy-outline"></ion-icon>
+          <div class="city">Ohio</div>
+          <hr class="divider" />
+          <div class="temperature">
+            <img class="temperature__icon" src="" alt="current weather icon" />
+
+            <div class="temperature__value">4°</div>
+
+            <img class="temperature__icon" src="" alt="current weather icon" />
           </div>
-          <div class="temperature__value">4°</div>
-          <div class="temperature__icon">
-            <ion-icon name="rainy-outline"></ion-icon>
+          <hr class="divider divider--2" />
+          <div class="feels-like"><span>Feels like:</span> <span>4°</span></div>
+          <div class="humidity"><span>Humidity:</span> <span>64%</span></div>
+          <div class="pressure">
+            <span>Pressure:</span> <span>1015mbar</span>
           </div>
-        </div>
-        <hr class="divider divider--2" />
-        <div class="feels-like"><span>Feels like:</span> <span>4°</span></div>
-        <div class="humidity"><span>Humidity:</span> <span>64%</span></div>
-        <div class="pressure"><span>Pressure:</span> <span>1015mbar</span></div>
-        <div class="wind">
-          <span>Wind Speed:</span> <span>x*1.852 KM/H</span>
-        </div>
-        <div class="wind__dir"><span> Wind Direction:</span></div>
-      </div> -->
+          <div class="wind">
+            <span>Wind Speed:</span> <span>x*1.852 KM/H</span>
+          </div>
+          <div class="wind__dir"><span> Wind Direction:</span></div>
+        </div> -->
       </div>
     </main>
     <footer class="footer">
