add error handling for non existing city

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
           <div class="wind__dir"><span> Wind Direction:</span></div>
         </div> -->
       </div>
+      <div class="error__box">
+        <!-- <p class="error__message">Searched city does not exist.</p> -->
+      </div>
     </main>
     <footer class="footer">
       <p class="copyright">
